# action-crosspost

./: .pre-commit-config.yaml  README.md  action.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
scripts/: get_urls.py  post_urls.py  pyproject.toml
