[project]
name = "scripts"
version = "0.1.0"
description = "A set of helper scripts"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "ultimate-sitemap-parser>=1.6.0",
]
[tool.autopep8]
max_line_length = 120
[tool.flake8]
max-line-length = 120
